# PokeLib

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  battleData.h  battleInfo.h  cmake_uninstall.cmake.in  example.c  globals.h  pokelib.c  pokelib.h  pokelib_move.c  pokelib_move.h  pokelib_pokemon.c  pokelib_pokemon.h  pokelib_team.c  pokelib_team.h  pokemonConfig.c  pokemonConfig.h  pokemonInfo.c  pokemonInfo.h  pokemonWizard.c  pokemonWizard.h  pokesim.c  pokesim.h  pokesim_move.c  pokesim_move.h  pokesim_pokemon.c  pokesim_pokemon.h  pokesim_team.c  pokesim_team.h  team.c  team.h  teamWizard.c  teamWizard.h
source/: pokelib.c  pokelib.h
